@@ -13,6 +13,7 @@ TMW.CHANGELOG = {
 [==[* Fixed an error that will happen when screen animations end.]==],
 [==[* Cooldown icons that aren't set to show when usable should once again fire an On Finish event.]==],
 [==[* Fixed ItemCache.lua:110 bad argument #1 to 'pairs' (table expected, got nil)]==],
+[==[* Fixed an issue that would break upgrades over locale-specific data.]==],
 [==[]==],
 [==[===v7.2.3===]==],
 [==[* The old Runes condition has been deprecated. In its place are 3 new conditions that should be much easier to use.]==],
